<resources>
    <string name="app_name">SecApp</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="add_password">Add Password</string>
    <string name="change_pin">Change PIN</string>
    <string name="app_name_hint">App Name</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>