<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/customborder"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/popUpInputApp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/app_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/popUpInputPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/popUpInputPass"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <EditText
        android:id="@+id/popUpInputPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/popUpInputSubmit"
        app:layout_constraintEnd_toEndOf="@+id/popUpInputSubmit"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/popUpInputSubmit" />

    <Button
        android:id="@+id/popUpInputSubmit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>